--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ isahc = {version = "1.7.2", features = ["json"]}
 duct = "0.13.7"
 dotenvy = "0.15.7"
 serde_json = "1.0.134"
+clap = "4.5.23"
+yansi = "1.0.1"
+
