--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,18 @@ description = "this helps you generate meaningful commit messages locally using 
 version = "0.1.2"
 edition = "2021"
 license-file = "LICENSE"
-homepage = "https://github.com/shivamhwp/git-acm"
+homepage = "https://shivamhwp.github.io/git-acm/"
 repository = "https://github.com/shivamhwp/git-acm"
 readme = "cargo-readme.md"
-
+exclude = ["docs"]
 
 
 [dependencies]
 isahc = {version = "1.7.2", features = ["json"]}
 duct = "0.13.7"
 dotenvy = "0.15.7"
-serde_json = "1.0.134"
 clap = "4.5.23"
 yansi = "1.0.1"
+serde_json = "1.0.135"
+
 
