--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+# for gemini api
+
+GEMINI_API_URL="https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"
 GEMINI_API_KEY=""
-GEMINI_API_URL=""
+
+# for anthropic api
+
+ANTHROPIC_API_URL="https://api.anthropic.com/v1/messages"
+ANTHROPIC_API_KEY=""
+
+# for openai api
+
+OPENAI_API_URL="https://api.openai.com/v1/chat/completions"
+OPENAI_API_KEY=""
