--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "this helps you generate meaningful commit messages locally using 
 version = "1.0.0"
 edition = "2021"
 license-file = "LICENSE"
-homepage = "https://shivamhwp.github.io/git-acm/"
+homepage = "work in progress"
 repository = "https://github.com/shivamhwp/git-acm"
 readme = "cargo-readme.md"
 exclude = ["docs"]
