--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write # Explicitly grant permissions to create releases
+
 jobs:
   release:
     name: Release - ${{ matrix.platform.os }}
@@ -27,44 +30,40 @@ jobs:
             asset_name: git-acm-windows-amd64.exe
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
+      - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.platform.target }}
 
-      - name: Build binary
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target ${{ matrix.platform.target }}
+      - name: Build
+        run: cargo build --release --target ${{ matrix.platform.target }}
 
-      - name: Prepare binary
-        shell: bash
+      - name: Prepare binary (Unix)
+        if: matrix.platform.os != 'windows-latest'
         run: |
-          cd target/${{ matrix.platform.target }}/release
-          if [ "${{ matrix.platform.os }}" = "windows-latest" ]; then
-            7z a ../../../${{ matrix.platform.asset_name }}.zip ${{ matrix.platform.binary_name }}
+          cd target/${{ matrix.platform.target }}/release/
+          tar -czf ../../../${{ matrix.platform.asset_name }}.tar.gz ${{ matrix.platform.binary_name }}
+          if [ "${{ matrix.platform.os }}" = "ubuntu-latest" ]; then
+            sha256sum ../../../${{ matrix.platform.asset_name }}.tar.gz > ../../../${{ matrix.platform.asset_name }}.tar.gz.sha256
           else
-            tar -czf ../../../${{ matrix.platform.asset_name }}.tar.gz ${{ matrix.platform.binary_name }}
+            shasum -a 256 ../../../${{ matrix.platform.asset_name }}.tar.gz > ../../../${{ matrix.platform.asset_name }}.tar.gz.sha256
           fi
 
-      - name: Generate SHA-256 checksums
-        shell: bash
+      - name: Prepare binary (Windows)
+        if: matrix.platform.os == 'windows-latest'
+        shell: pwsh
         run: |
-          if [ "${{ matrix.platform.os }}" = "windows-latest" ]; then
-            sha256sum ${{ matrix.platform.asset_name }}.zip > ${{ matrix.platform.asset_name }}.zip.sha256
-          else
-            sha256sum ${{ matrix.platform.asset_name }}.tar.gz > ${{ matrix.platform.asset_name }}.tar.gz.sha256
-          fi
+          cd target/${{ matrix.platform.target }}/release/
+          Compress-Archive -Path ${{ matrix.platform.binary_name }} -DestinationPath ../../../${{ matrix.platform.asset_name }}.zip
+          Get-FileHash -Path ../../../${{ matrix.platform.asset_name }}.zip -Algorithm SHA256 | ForEach-Object { $_.Hash } > ../../../${{ matrix.platform.asset_name }}.zip.sha256
 
-      - name: Upload Release Assets
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Create Release
+        uses: ncipollo/release-action@v1
         with:
-          files: |
-            ${{ matrix.platform.asset_name }}.*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          allowUpdates: true
+          artifacts: "${{ matrix.platform.asset_name }}.*"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: false
+          draft: false
