--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "git-acm"
 description = "instant meaningful git commit messages, locally with AI"
-version = "1.0.1"
+version = "1.0.2"
 edition = "2021"
 license-file = "LICENSE"
 homepage = "https://www.shivam.ing"
@@ -20,3 +20,6 @@ serde_json = "1.0.135"
 arboard = "3.4.1"
 
 
+[profile.release]
+codegen-units = 1
+lto = true
