--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ ANTHROPIC_API_KEY=""
 
 OPENAI_API_URL="https://api.openai.com/v1/chat/completions"
 OPENAI_API_KEY=""
+
+
+# for llama api
+
+LLAMA_API_URL="http://localhost:11434/api/generate"
+LLAMA_MODEL_NAME= "llama3.2:1b"
+
+
