feat: Add deepseek API support

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ LLAMA_API_URL="http://localhost:11434/api/generate"
 LLAMA_MODEL_NAME= "llama3.2:1b"
 
 
+# for deepseek api
+
+DEEPSEEEK_API_URL="https://api.deepseek.com/chat/completions"
+DEEPSEEEK_API_KEY=""
