--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "git-acm"
 description = "instant meaningful git commit messages, locally with AI"
-version = "1.1.1"
+version = "1.1.2"
 edition = "2021"
 license-file = "LICENSE"
-homepage = "https://www.shivam.ing"
+homepage = "https://git-acm.pages.dev"
 repository = "https://github.com/shivamhwp/git-acm"
 readme = "cargo-readme.md"
 exclude = ["docs"]
