--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "git-acm"
-description = "instant meaningful git commit messages, locally with AI"
-version = "1.1.4"
+description = "instant meaningful commit messages."
+version = "1.2.4"
 edition = "2021"
 license-file = "LICENSE"
 homepage = "https://git-acm.pages.dev"
@@ -19,7 +19,7 @@ yansi = "1.0.1"
 serde_json = "1.0.135"
 arboard = "3.4.1"
 crossterm = "0.28.1"
-
+serde = { version = "1.0.215", features = ["derive"] }
 
 [profile.release]
 codegen-units = 1
