--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,17 @@ exclude = ["docs"]
 
 
 [dependencies]
-isahc = {version = "1.7.2", features = ["json"]}
+openrouter-rs = "0.4.5"
+tokio = { version = "1", features = ["full"] }
 duct = "0.13.7"
 dotenvy = "0.15.7"
 clap = "4.5.23"
 yansi = "1.0.1"
-serde_json = "1.0.135"
 arboard = "3.4.1"
 crossterm = "0.28.1"
-serde = { version = "1.0.215", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 [profile.release]
 codegen-units = 1
