--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["docs"]
 
 [dependencies]
 openrouter-rs = "0.4.5"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 duct = "0.13.7"
 dotenvy = "0.15.7"
 clap = "4.5.23"
@@ -21,7 +21,6 @@ arboard = "3.4.1"
 crossterm = "0.28.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 [profile.release]
 codegen-units = 1
