--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
             runner: ubuntu-24.04
             target: x86_64-unknown-linux-gnu
           - name: linux-aarch64
-            runner: ubuntu-24.04-arm
+            runner: ubuntu-24.04-arm64
             target: aarch64-unknown-linux-gnu
           - name: macos-x86_64
             runner: macos-13
