--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,1 @@
-# for gemini api
-GEMINI_API_KEY=""
-
-# for anthropic api
-
-ANTHROPIC_API_KEY=""
-
-# for openai api
-
-OPENAI_API_KEY=""
-
-
-# for llama api
-
-LLAMA_API_URL="http://localhost:11434/api/generate"
-LLAMA_MODEL_NAME= "llama3.2:1b"
-
-
-# for deepseek api
-
-DEEPSEEEK_API_KEY=""
+OPENROUTER_API_KEY="sk-or-v1......"
